--- a/Tradeterms/Info.plist
+++ b/Tradeterms/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Te permite anadir fotos a tus items</string>
 </dict>
 </plist>
